tests/NormalTests/paczka1/fuzzy1/62385649.err
Error in line 1: lNHrgz4fJ A847 19,1
Error in line 9: d1dFGSGc2 A262 78,7
Error in line 25: A847 A262 28,0
Error in line 27: lNHrgz4fJ A262 22,9
Error in line 22: h3xo7 A847 53,9
